<resources>
    <string name="app_name">RecognizeSymbolApp</string>
    <string name="prediction">Prediction</string>
    <string name="emptyResult" translatable="false">--</string>
    <string name="probability">Probability</string>
    <string name="timecost">Timecost</string>
    <string name="detect">Detect</string>
    <string name="clear">Clear</string>
    <string name="failed_to_create_classifier">Failed to create classifier</string>
    <string name="please_write_a_digit">Please write a digit in the box above.</string>
    <string name="timecost_value">%1$d ms</string>
    <string name="imageTitle">Images</string>
    <string name="cancel">Cancel</string>
</resources>
