<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_marginTop="-108dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prediction"
            style="@style/Labels" />

        <TextView
            android:id="@+id/tv_value_predicate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emptyResult"
            style="@style/Values" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/probability"
                style="@style/Labels" />

            <TextView
                android:id="@+id/tv_probability_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emptyResult"
                style="@style/Values" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timecost"
                style="@style/Labels" />

            <TextView
                android:id="@+id/tv_timecost_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emptyResult"
                style="@style/Values" />
        </LinearLayout>
    </LinearLayout>

    <com.velichkomarija.recognizesymbolapp.ui.FingerPaintView
        android:id="@+id/finger_paint"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:foreground="@drawable/shape_rect_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_detect"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/Button"
            android:layout_marginHorizontal="12dp"
            android:text="@string/detect" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/Button"
            android:layout_marginHorizontal="12dp"
            android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>